src/main/resources/lexer/Fasta.bnf
{
  parserClass="com.kivojenko.plugin.fasta.language.parser.FastaParser"
  parserUtilClass="com.kivojenko.plugin.fasta.language.parser.FastaParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Fasta"
  psiImplClassSuffix="Impl"
  psiPackage="com.kivojenko.plugin.fasta.language.psi"
  psiImplPackage="com.kivojenko.plugin.fasta.language.psi.impl"
  psiImplUtilClass="com.kivojenko.plugin.fasta.language.psi.impl.FastaPsiImplUtil"

  elementTypeHolderClass="com.kivojenko.plugin.fasta.language.FastaTokenTypes"
  elementTypeClass="com.kivojenko.plugin.fasta.language.parser.FastaElementType"
  tokenTypeClass="com.kivojenko.plugin.fasta.language.parser.FastaTokenType"

  tokens = [
  START
  DESCRIPTION
  VALUE
  ]
}

file ::= sequence* <<eof>>

sequence ::= header body
header ::= START DESCRIPTION

body ::= VALUE
